# city-of-tshwane

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.heroku  Procfile  README.md  compose.yaml  deploy.sh  development.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: heroku-dev.yml  heroku-prod.yml
scripts/: create_alembic_revision.sh  dev-local.sh  test-local.sh
src/: alembic.ini
src/app/: main.py  otel-agent-config.yaml
src/app/alembic/: env.py
src/app/alembic/versions/: 90deb8c510f7_added_user_and_item_tables.py  f2496a93e2ed_changed_default_booleans_on_user.py
src/app/api/: deps.py  main.py
src/app/api/routes/: items.py  login.py  payments.py  register.py  users.py  utils.py
src/app/core/: config.py  db.py  ocpo_client.py  security.py  xroad_headers.py
src/app/crud/: __init__.py  base.py  items.py  users.py
src/app/models/api/: __init__.py  generic.py  items.py  payments.py  users.py
src/app/models/db/: __init__.py  base.py  items.py  users.py
src/app/services/: ecs_boto_service_example_s3.py  heroku_boto_service_example_s3.py  payments.py
src/app/tests/: conftest.py
src/app/tests/api/routes/: test_items.py  test_login.py  test_users.py
src/app/tests/crud/: test_item.py  test_user.py
src/app/tests/performance/: locustfile.py
src/app/tests/utils/: item.py  user.py  utils.py
src/app/utils/: helpers.py  log_requests.py
